# code-smore

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  about.hbs  about.toml  funcs.sh  licenses.txt
.github/workflows/: release.yml  rust.yml
coverage/master/: index.html
coverage/master/coverage/home/runner/work/code-smore/code-smore/src/: cli.rs.html  credits.rs.html  fecr_quiz.rs.html  filter.rs.html  gpio.rs.html  main.rs.html  morse.rs.html  pipewire.rs.html  term.rs.html
coverage/master/coverage/home/runner/work/morse-quest/morse-quest/src/: cli.rs.html  fecr_quiz.rs.html  main.rs.html  morse.rs.html
embedded/esp32/mqtt-bridge/morse-mqtt-bridge/: README.md  morse-mqtt-bridge.ino  secrets.example.h
embedded/teensy-arduino/decoder-display/: README.md  decoder-display.fzz  decoder-display.ino
sample/: indirect-sample.flac  paddle-sample-20wpm.flac  paddle-sample.flac  straight-key-sample.flac
src/: alsa.rs  cli.rs  credits.rs  fecr_quiz.rs  fft.rs  file.rs  filter.rs  gpio.rs  listen.rs  main.rs  matrix.rs  message.rs  morse.rs  pipewire.rs  prelude.rs  rts.rs  term.rs  transceive.rs  transeive.rs
