[package]
name = "code-smore"
description = "A morse code practice tool"
version = "0.1.30"
edition = "2021"
repository = "https://github.com/EnigmaCurry/code-smore"
homepage = "https://github.com/EnigmaCurry/code-smore"
license = "MIT"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/code-smore"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
atty = "0.2.14"
audrey = "0.3.0"
bytemuck = "1.20.0"
chrono = "0.4.38"
clap = "4.5.17"
clap_complete = "4.5.29"
crossterm = "0.28.1"
dasp = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.5"
hound = "3.5.1"
iir_filters = "0.1.3"
log = "0.4.22"
morse-codec = "0.3.2"
rand = "0.8.5"
regex = "1.11.1"
rodio = "0.20.1"
tabled = "0.17.0"
term_size = "0.3.2"
textwrap = "0.16.1"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8.0"

[dev-dependencies]
shell-words = "1.1.0"

[build-dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
