[package]
name = "code-smore"
description = "A morse code practice tool"
version = "0.1.34"
edition = "2024"
repository = "https://github.com/EnigmaCurry/code-smore"
homepage = "https://github.com/EnigmaCurry/code-smore"
license = "MIT"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/code-smore"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
#audrey = "0.3.0"
bytemuck = "1.20.0"
chrono = "0.4.38"
clap = "4.5.17"
clap_complete = "4.5.29"
crossterm = "0.28.1"
#dasp = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.5"
#hound = "3.5.1"
iir_filters = "0.1.3"
is-terminal = "0.4.13"
log = "0.4.22"
morse-codec = "0.4.30"
rand = "0.8.5"
regex = "1.11.1"
rppal = { version = "0.22.1", optional = true }
tabled = "0.17.0"
term_size = "0.3.2"
textwrap = "0.16.1"
rodio = {version = "0.20.1", optional = true }
serialport = "4.7.2"
anyhow = "1.0.98"

[features]
audio = ["rodio"]
pipewire = ["dep:pipewire"]
gpio = ["rppal"]
default = ["audio", "gpio"]

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.8.0", optional = true }

[dev-dependencies]
shell-words = "1.1.0"

[build-dependencies]
clap = "4.5.17"
clap_complete = "4.5.29"
dirs = "5.0.1"
